// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AmeliproBreadcrumb > Setting props should update attributes of inner tags > prop uniqueId sets id on container, list, buttons and current page 1`] = `
<nav
  aria-label="Fil d'Ariane"
  class="breadcrumb"
>
  <ol class="
    align-center
    breadcrumb__list
    d-flex
    list-style-none
  ">
    <li class="
      align-center
      breadcrumb__item
      d-flex
    ">
      <amelipro-btn-stub
        badge="false"
        badgebgcolor="ap-pink"
        badgecolor="ap-white"
        bordered="false"
        class="
          breadcrumb__btn
          font-weight-semibold
          text-none
        "
        color="ap-blue-darken-1"
        disabled="false"
        hovercolor="ap-blue-darken-2"
        hoverunderline="true"
        iconbgcolor="transparent"
        iconbordered="false"
        iconleft="false"
        infoblock="false"
        minheight="2.5rem"
        size="60px"
        text="true"
        textcolor="ap-white"
        type="button"
        underline="false"
      ></amelipro-btn-stub>
      <span
        aria-hidden="true"
        class="breadcrumb__separator"
      ></span>
    </li>
    <li class="
      align-center
      breadcrumb__item
      d-flex
    ">
      <amelipro-btn-stub
        badge="false"
        badgebgcolor="ap-pink"
        badgecolor="ap-white"
        bordered="false"
        class="
          breadcrumb__btn
          font-weight-semibold
          text-none
        "
        color="ap-blue-darken-1"
        disabled="false"
        hovercolor="ap-blue-darken-2"
        hoverunderline="true"
        iconbgcolor="transparent"
        iconbordered="false"
        iconleft="false"
        infoblock="false"
        minheight="2.5rem"
        size="60px"
        text="true"
        textcolor="ap-white"
        type="button"
        underline="false"
      ></amelipro-btn-stub>
      <span
        aria-hidden="true"
        class="breadcrumb__separator"
      ></span>
    </li>
    <li class="
      align-center
      breadcrumb__item
      d-flex
    ">
      <amelipro-btn-stub
        badge="false"
        badgebgcolor="ap-pink"
        badgecolor="ap-white"
        bordered="false"
        class="
          breadcrumb__btn
          font-weight-semibold
          text-none
        "
        color="ap-blue-darken-1"
        disabled="false"
        hovercolor="ap-blue-darken-2"
        hoverunderline="true"
        iconbgcolor="transparent"
        iconbordered="false"
        iconleft="false"
        infoblock="false"
        minheight="2.5rem"
        size="60px"
        text="true"
        textcolor="ap-white"
        type="button"
        underline="false"
      ></amelipro-btn-stub>
      <span
        aria-hidden="true"
        class="breadcrumb__separator"
      ></span>
    </li>
    <li>
      <p
        aria-current="page"
        class="
          breadcrumb__active-page
          mb-0
          text-none
        "
      >
        item 4
      </p>
    </li>
  </ol>
</nav>
`;

exports[`AmeliproBreadcrumb > Setting props should update props or attributes of inner components > prop items with href and to sets AmeliproBtn props (via attribute on .breadcrumb__btn) 1`] = `
<nav
  aria-label="Fil d'Ariane"
  class="breadcrumb"
>
  <ol class="
    align-center
    breadcrumb__list
    d-flex
    list-style-none
  ">
    <li class="
      align-center
      breadcrumb__item
      d-flex
    ">
      <v-btn-stub
        block="false"
        border="false"
        class="
          amelipro-btn
          breadcrumb__btn
          breadcrumb__btn
          font-weight-semibold
          font-weight-semibold
          text-none
          text-none
        "
        color="ap-blue-darken-1"
        density="default"
        disabled="false"
        elevation="0"
        exact="false"
        flat="true"
        height="auto"
        href="/x"
        icon="false"
        loading="false"
        minheight="auto"
        replace="false"
        ripple="false"
        size="default"
        slim="false"
        stacked="false"
        style="padding: 0px;"
        symbol="Symbol(vuetify:v-btn-toggle)"
        tag="button"
        tile="false"
        type="button"
        variant="text"
      ></v-btn-stub>
      <span
        aria-hidden="true"
        class="breadcrumb__separator"
      ></span>
    </li>
    <li class="
      align-center
      breadcrumb__item
      d-flex
    ">
      <v-btn-stub
        block="false"
        border="false"
        class="
          amelipro-btn
          breadcrumb__btn
          breadcrumb__btn
          font-weight-semibold
          font-weight-semibold
          text-none
          text-none
        "
        color="ap-blue-darken-1"
        density="default"
        disabled="false"
        elevation="0"
        exact="false"
        flat="true"
        height="auto"
        icon="false"
        loading="false"
        minheight="auto"
        replace="false"
        ripple="false"
        size="default"
        slim="false"
        stacked="false"
        style="padding: 0px;"
        symbol="Symbol(vuetify:v-btn-toggle)"
        tag="button"
        tile="false"
        to="/home"
        type="button"
        variant="text"
      ></v-btn-stub>
      <span
        aria-hidden="true"
        class="breadcrumb__separator"
      ></span>
    </li>
    <li class="
      align-center
      breadcrumb__item
      d-flex
    ">
      <v-btn-stub
        block="false"
        border="false"
        class="
          amelipro-btn
          breadcrumb__btn
          breadcrumb__btn
          font-weight-semibold
          font-weight-semibold
          text-none
          text-none
        "
        color="ap-blue-darken-1"
        density="default"
        disabled="false"
        elevation="0"
        exact="false"
        flat="true"
        height="auto"
        icon="false"
        loading="false"
        minheight="auto"
        replace="false"
        ripple="false"
        size="default"
        slim="false"
        stacked="false"
        style="padding: 0px;"
        symbol="Symbol(vuetify:v-btn-toggle)"
        tag="button"
        tile="false"
        type="button"
        variant="text"
      ></v-btn-stub>
      <span
        aria-hidden="true"
        class="breadcrumb__separator"
      ></span>
    </li>
    <li>
      <p
        aria-current="page"
        class="
          breadcrumb__active-page
          mb-0
          text-none
        "
      >
        item 4
      </p>
    </li>
  </ol>
</nav>
`;

exports[`AmeliproBreadcrumb > Snapshots > renders the component with all properties filled in 1`] = `
<nav
  aria-label="Fil d'Ariane"
  class="breadcrumb"
  id="modified-unique-id-container"
>
  <ol
    class="
      align-center
      breadcrumb__list
      d-flex
      list-style-none
    "
    id="modified-unique-id-list"
  >
    <li class="
      align-center
      breadcrumb__item
      d-flex
    ">
      <amelipro-btn-stub
        badge="false"
        badgebgcolor="ap-pink"
        badgecolor="ap-white"
        bordered="false"
        class="
          breadcrumb__btn
          font-weight-semibold
          text-none
        "
        color="ap-blue-darken-1"
        disabled="false"
        hovercolor="ap-blue-darken-2"
        hoverunderline="true"
        iconbgcolor="transparent"
        iconbordered="false"
        iconleft="false"
        infoblock="false"
        minheight="2.5rem"
        size="60px"
        text="true"
        textcolor="ap-white"
        type="button"
        underline="false"
        uniqueid="modified-unique-id-btn-0"
      ></amelipro-btn-stub>
      <span
        aria-hidden="true"
        class="breadcrumb__separator"
      ></span>
    </li>
    <li class="
      align-center
      breadcrumb__item
      d-flex
    ">
      <amelipro-btn-stub
        badge="false"
        badgebgcolor="ap-pink"
        badgecolor="ap-white"
        bordered="false"
        class="
          breadcrumb__btn
          font-weight-semibold
          text-none
        "
        color="ap-blue-darken-1"
        disabled="false"
        hovercolor="ap-blue-darken-2"
        hoverunderline="true"
        iconbgcolor="transparent"
        iconbordered="false"
        iconleft="false"
        infoblock="false"
        minheight="2.5rem"
        size="60px"
        text="true"
        textcolor="ap-white"
        type="button"
        underline="false"
        uniqueid="modified-unique-id-btn-1"
      ></amelipro-btn-stub>
      <span
        aria-hidden="true"
        class="breadcrumb__separator"
      ></span>
    </li>
    <li class="
      align-center
      breadcrumb__item
      d-flex
    ">
      <amelipro-btn-stub
        badge="false"
        badgebgcolor="ap-pink"
        badgecolor="ap-white"
        bordered="false"
        class="
          breadcrumb__btn
          font-weight-semibold
          text-none
        "
        color="ap-blue-darken-1"
        disabled="false"
        hovercolor="ap-blue-darken-2"
        hoverunderline="true"
        iconbgcolor="transparent"
        iconbordered="false"
        iconleft="false"
        infoblock="false"
        minheight="2.5rem"
        size="60px"
        text="true"
        textcolor="ap-white"
        type="button"
        underline="false"
        uniqueid="modified-unique-id-btn-2"
      ></amelipro-btn-stub>
      <span
        aria-hidden="true"
        class="breadcrumb__separator"
      ></span>
    </li>
    <li>
      <p
        aria-current="page"
        class="
          breadcrumb__active-page
          mb-0
          text-none
        "
        id="modified-unique-id-current-page"
      >
        New item 4
      </p>
    </li>
  </ol>
</nav>
`;

exports[`AmeliproBreadcrumb > Snapshots > renders the component with only required properties filled in 1`] = `
<nav
  aria-label="Fil d'Ariane"
  class="breadcrumb"
>
  <ol class="
    align-center
    breadcrumb__list
    d-flex
    list-style-none
  ">
    <li class="
      align-center
      breadcrumb__item
      d-flex
    ">
      <amelipro-btn-stub
        badge="false"
        badgebgcolor="ap-pink"
        badgecolor="ap-white"
        bordered="false"
        class="
          breadcrumb__btn
          font-weight-semibold
          text-none
        "
        color="ap-blue-darken-1"
        disabled="false"
        hovercolor="ap-blue-darken-2"
        hoverunderline="true"
        iconbgcolor="transparent"
        iconbordered="false"
        iconleft="false"
        infoblock="false"
        minheight="2.5rem"
        size="60px"
        text="true"
        textcolor="ap-white"
        type="button"
        underline="false"
      ></amelipro-btn-stub>
      <span
        aria-hidden="true"
        class="breadcrumb__separator"
      ></span>
    </li>
    <li class="
      align-center
      breadcrumb__item
      d-flex
    ">
      <amelipro-btn-stub
        badge="false"
        badgebgcolor="ap-pink"
        badgecolor="ap-white"
        bordered="false"
        class="
          breadcrumb__btn
          font-weight-semibold
          text-none
        "
        color="ap-blue-darken-1"
        disabled="false"
        hovercolor="ap-blue-darken-2"
        hoverunderline="true"
        iconbgcolor="transparent"
        iconbordered="false"
        iconleft="false"
        infoblock="false"
        minheight="2.5rem"
        size="60px"
        text="true"
        textcolor="ap-white"
        type="button"
        underline="false"
      ></amelipro-btn-stub>
      <span
        aria-hidden="true"
        class="breadcrumb__separator"
      ></span>
    </li>
    <li class="
      align-center
      breadcrumb__item
      d-flex
    ">
      <amelipro-btn-stub
        badge="false"
        badgebgcolor="ap-pink"
        badgecolor="ap-white"
        bordered="false"
        class="
          breadcrumb__btn
          font-weight-semibold
          text-none
        "
        color="ap-blue-darken-1"
        disabled="false"
        hovercolor="ap-blue-darken-2"
        hoverunderline="true"
        iconbgcolor="transparent"
        iconbordered="false"
        iconleft="false"
        infoblock="false"
        minheight="2.5rem"
        size="60px"
        text="true"
        textcolor="ap-white"
        type="button"
        underline="false"
      ></amelipro-btn-stub>
      <span
        aria-hidden="true"
        class="breadcrumb__separator"
      ></span>
    </li>
    <li>
      <p
        aria-current="page"
        class="
          breadcrumb__active-page
          mb-0
          text-none
        "
      >
        item 4
      </p>
    </li>
  </ol>
</nav>
`;
